--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ember-cli-babel": "^5.1.3",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.1",
+    "ember-cli-deploy": "0.5.1",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.2.0",
     "ember-cli-ic-ajax": "0.2.1",
@@ -34,10 +35,12 @@
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "5.0.1",
     "ember-cli-sri": "^1.0.3",
+    "ember-cli-twitter-feed": "0.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
-    "ember-moment": "4.0.0"
+    "ember-moment": "4.0.0",
+    "ember-pagefront": "0.9.9"
   }
 }
