--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
     "ember-moment": "4.0.0",
-    "ember-pagefront": "0.9.9"
+    "ember-pagefront": "0.9.9",
+    "liquid-fire": "0.22.0"
   }
 }
